# CRISPRessoSea

./: CRISPRessoSea.py  LICENSE  MANIFEST.in  README.md  build.sh  infer_amplicons.py  meta.yaml  process_pools.py  pyproject.toml  readme.md  setup.py
demo/make_demo/: 01_make_genome.ipynb  02_download_srr.ipynb  03_run_make_guide_file.sh  04_run_process.sh  SRP258158.metadata.txt  supp_2.txt
demo/make_demo/small_demo/: 01_make_demo.ipynb  02_make_guide_file.sh  03_run_process.sh  04_replot.ipynb  05_zip.ipynb
demo/make_demo/small_demo/CRISPRessoSea_demo/: demo_genome.2.bt2  demo_genome.3.bt2  demo_genome.4.bt2  demo_genome.fa  demo_genome.fa.fai  demo_genome.rev.2.bt2  guides.demo.txt  replot_agg_stats.txt  replot_samples.txt  samples.demo.txt
manuscript_figure_generation/fig2_zhou_2023/: 01_process.sh  02_make_agg_stats.ipynb  03_plot_final.sh  04_replot_low.sh  Fs2_withgroup.txt  guides.txt
manuscript_figure_generation/fig3_wang_2025/: 01_process.sh  02_make_aggregated_stats.ipynb  03_replot.sh  guides.txt  samples.txt
simulation/: 01_make_simulations.py  02_run.sh  03_make_replots.ipynb  03_make_replots_old.ipynb
src/CRISPRessoSea/: CRISPRessoSea.py
src/CRISPRessoSea/templates/: seaReport.html
src/CRISPRessoSea/templates/shared/partials/: fig_summaries.html
