[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CRISPRessoSea"
version = "0.1.5"
description = "CRISPRessoSea: pooled CRISPR analysis pipeline"
authors = [
    { name = "Kendell Clement", email = "k.clement@utah.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy<=1.15.3", # Temporary fix for a breaking change in scipy/statsmodels https://github.com/statsmodels/statsmodels/issues/9542
    "statsmodels",
    "jinja2",
    "crispresso2",
]

[project.urls]
Homepage = "https://github.com/clementlab/CRISPRessoSea"

[project.scripts]
CRISPRessoSea = "CRISPRessoSea.CRISPRessoSea:main"

[tool.setuptools]
include-package-data = true
